--- a/index.css
+++ b/index.css
@@ -1,19 +1,21 @@
-h1{padding-top: 50px;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+}
+h1{
+    padding-top: 50px;
     color: black;
-    font-size: 200%;
     text-align: center;
 
 }
-.header{
-    background-color:#fff;
-   
-}
-
 .navbar{
     display: flex;
     align-items: center;
-    padding-top: 30px;
+    padding: 30px;
 }
+
 nav{
     flex: 1;
     text-align: right;
@@ -24,39 +26,59 @@ nav ul{
     display: inline-block;
     list-style-type: none;
     text-align: center;
-
 }
 nav ul li{
     display: inline-block;
     margin-right: 20px;
-    font-weight: bold;
+    font-size: 20px;
 }
 a{
     color: black;
 }
-p{
-    color: grey;
-}
-.colnm img{
-    width: 300px;
-    height: 350px;
-    float: right;
 
+p{
+    color: black;
 }
-.colnm h1{
-    font-size: 50px;
-    line-height: 40px;
-    margin: 10px 0;
-    float: left;
+.row{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.col-2{
+    flex-basis: 50%;
+    min-width: 300px;
+}
+.col-2 img{
+   
+  max-width: 50%;
+  max-height: 50%;
+  padding: 50px 0;
+
 }
 .btn{
     display: inline-block;
-    background-color: #F6B400;
     padding: 8px 30px;
+    background: #F6B400;
+    color:black;
     margin: 30px 0;
     border-radius: 30px;
-    transition: 0.5s;
 }
+.header{
+    background-color: #fff;
+}
+.header .row{
+   
+    margin-top: 70px;
+}
+.logo em{
+    color: #F6B400;
+}
+
+
+
+
+
 
 /*----------quality------*/
 .quality{
@@ -105,7 +127,6 @@ p{
     display: inline-flex;
 }
 .title{
-    text-decoration: #F6B400;
     text-align: center;
     padding: 20px;
     margin: 0 auto 80px;
@@ -117,7 +138,7 @@ p{
 em{
     color: black;
 }
-col1{
+.col1{
     flex-basis: 25%;
     padding: 10px;
     min-width: 200px;
@@ -134,13 +155,7 @@ col1{
 /*double-----------*/
 .double{
     background: radial-gradient(#fff,#E1EBE6);
-    padding: 30px 0;
-    margin: 50px;
-    height: 300px;
-}
-.double img{
-    height: 150px;
-    width: 200px;   
+
 }
 .double em{
     color: #F6B400;
@@ -162,37 +177,31 @@ col1{
     padding: 100px;
 }
 /*-----------footer-----*/
+ .siteMap{
+    background-color:#E1EBE6;
+   color: black;
+   width: 100%;
+   box-sizing: border-box;
+   margin: 3em 0;
+   padding: 0 5%;
+   display: inline-flex;
+   align-items: center;
+   justify-content: center;
+}
 .footer{
-    background-color:  #E1EBE6;
-    font-size: 15px;
-    padding: 60px 0 20px;
+    float: left;
+    display: flex;
+    width: 30.3%;
+    text-align: left;
+    display: inline;
+    margin: 10px 50px;
 }
-.footer h3{
-    color: black;
-    margin-bottom: 20px;
-}
-.footer-col1, .footer-col2, .footer-col3{
-    min-width: 200px;
-    margin-bottom: 20px;
-}
-.footer-col1{
-    flex-basis: 30%;
-    padding-left: 30px;
-
-}
-.footer-col1 em{
+.footer em{
     color: #F6B400;
 }
-.footer-col1 img{
-    width: 100px;
-    margin-bottom: 20px;
+.footer p{
+    margin-top: -250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.footer-col2{
-    flex-basis: 12%;
-    text-align: center;
-}
-.footer-col2 ul{
-    list-style-type: none;
-}
-
-
