--- a/index.css
+++ b/index.css
@@ -31,6 +31,7 @@ nav ul li{
     display: inline-block;
     margin-right: 20px;
     font-size: 20px;
+    font-weight: bold;
 }
 a{
     color: black;
@@ -74,12 +75,6 @@ p{
 .logo em{
     color: #F6B400;
 }
-
-
-
-
-
-
 /*----------quality------*/
 .quality{
     padding: 50px;
@@ -155,10 +150,33 @@ em{
 /*double-----------*/
 .double{
     background: radial-gradient(#fff,#E1EBE6);
+    height: auto;
 
 }
 .double em{
     color: #F6B400;
+}
+.check1{
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 300px;
+    z-index: 2;
+
+}
+.check2{
+   
+    position: absolute;
+   padding: 0;
+   margin-top: -70px;
+   margin-left: -10px;
+   margin-right: 200px;
+}
+.row1{
+    margin-left: 100px;
+    margin-top: 50px;
+    padding: 100px 0;
+    
 }
 /*----------discover------*/
 .disc{
@@ -169,16 +187,23 @@ em{
 }
 .disc img{
     float: right;
-    height: 300px;
-    width: 350px;
+    height: 400px;
+    width: 450px;
     padding: 50px;
+}
+.img-appg{
+width: 600px;
+height: 150px;
+position: relative;
+top: -100px;
+
 }
 .disc h2{
     padding: 100px;
 }
 /*-----------footer-----*/
  .siteMap{
-    background-color:#E1EBE6;
+   
    color: black;
    width: 100%;
    box-sizing: border-box;
@@ -189,12 +214,12 @@ em{
    justify-content: center;
 }
 .footer{
-    float: left;
     display: flex;
-    width: 30.3%;
-    text-align: left;
-    display: inline;
-    margin: 10px 50px;
+    margin: 50px;
+   
+}
+.cont{
+    background-color: #E1EBE6;
 }
 .footer em{
     color: #F6B400;
@@ -204,4 +229,46 @@ em{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.footer li{
+    list-style: none;
+}
+.footer input{
+    margin-left: 100px;
+}
+.footer-col{
+    display: inline;
+    width: 100%;
+    box-sizing: border-box;
+    margin: 3em 0;
+    padding: 0 5%;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+.footer button{
+    background-color: #F6B400;
+    border-radius: 5px;
+}
+.footer input{
+    border-radius: 5px;
+}
+footer .col-1{
+    margin-left: 50px;
+}
+ footer .col-2{
+    margin: 50px;
+    margin-left: 100px;
+}
+footer .col-3{
+    margin: 50px;
+    margin-left: 150px;
+}
+.columns{
+    float: left;
+    position: relative;
+    width: 50%;
+    text-align: left;
+    display: inline;
+    margin: 10px 5px;
 }
