--- a/index.css
+++ b/index.css
@@ -1,6 +1,4 @@
 *{
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
 
 }
@@ -82,7 +80,8 @@ p{
 }
 /*----------quality------*/
 .quality{
-    padding: 50px;
+    margin: 50px;
+    padding: 10px;
     display: inline-flex;
     background-color:#E1EBE6 ;
 }
@@ -113,8 +112,13 @@ p{
     color: black;
     font-size: 15px;
 }
+/*---------Menu-------*/
 .menu {
     display: inline-flex;    
+}
+.small-container img{ 
+    width: 40px;
+    height: 50px;
 }
 .col1{
     margin: 50px;
@@ -128,6 +132,7 @@ p{
 }
 .title{
     text-align: center;
+    text-decoration: underline;
     padding: 20px;
     margin: 0 auto 80px;
     position: relative;
@@ -152,10 +157,11 @@ em{
 .col1 p{
     font-size: 15px;
 }
+
 /*double-----------*/
 .double{
     background: radial-gradient(#fff,#E1EBE6);
-    height: auto;
+    height: 600px;
 
 }
 .double em{
