--- a/index.css
+++ b/index.css
@@ -78,6 +78,11 @@ p{
 .logo em{
     color: #F6B400;
 }
+.logo h3{
+    float: right;
+    margin: -5px;
+    padding: 40px;
+}
 /*----------quality------*/
 .quality{
     margin: 50px;
@@ -266,6 +271,13 @@ top: -100px;
 }
 footer .col-1{
     margin-left: 50px;
+}
+.col-1 {
+    float: right;
+    padding: 20px;  
+}
+.col-1 img{
+    float: left;
 }
  footer .col-2{
     margin: 50px;
