--- a/index.css
+++ b/index.css
@@ -1,5 +1,7 @@
 *{
     box-sizing: border-box;
+    
+
 
 }
 h1{
@@ -124,6 +126,9 @@ p{
 .small-container img{ 
     width: 40px;
     height: 50px;
+}
+.small-container .title{
+    margin: 20px;
 }
 .col1{
     margin: 50px;
