split backround color correctly

--- a/index.css
+++ b/index.css
@@ -68,7 +68,7 @@ p{
     background-color: #fff;
 }
 .container{
-    background: linear-gradient(to right,#E1EBE6 50%, #F6B400 50%);
+    background: linear-gradient(105deg ,#E1EBE6 65%, #F6B400 35%);
    
 
 }
